@@ -11,11 +11,8 @@ import java.net.http.HttpRequest;
 import java.net.http.HttpRequest.BodyPublishers;
 import java.net.http.HttpResponse;
 import java.net.http.HttpResponse.BodyHandlers;
-import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardOpenOption;
 import java.security.KeyManagementException;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
@@ -23,6 +20,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionException;
 import java.util.concurrent.ExecutionException;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -32,13 +30,12 @@ import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
 
 import org.eclipse.core.runtime.Platform;
-import org.eclipse.e4.ui.di.UISynchronize;
-import org.eclipse.osgi.service.datalocation.Location;
 import org.osgi.service.component.annotations.Component;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 
+import aero.minova.rcp.dataservice.HashService;
 import aero.minova.rcp.dataservice.IDataService;
 import aero.minova.rcp.model.Column;
 import aero.minova.rcp.model.DataType;
@@ -58,6 +55,8 @@ import aero.minova.rcp.model.form.MLookupField;
 @Component
 public class DataService implements IDataService {
 
+	private static final String APPLICATION_OCTET_STREAM = "application/octet-stream";
+	private static final String CONTENT_TYPE = "Content-Type";
 	public static final String TABLE_KEYTEXT = "KeyText";
 	public static final String TABLE_KEYLONG = "KeyLong";
 	public static final String TABLE_DESCRIPTION = "Description";
@@ -65,7 +64,11 @@ public class DataService implements IDataService {
 	public static final String TABLE_COUNT = "Count";
 	public static final String TABLE_FILTERLASTACTION = "FilterLastAction";
 
-	private static final boolean LOG = true;
+	private static final boolean LOG = "true"
+			.equalsIgnoreCase(Platform.getDebugOption("aero.minova.rcp.dataservice/debug/server"));
+	private static final boolean LOG_CACHE = "true"
+			.equalsIgnoreCase(Platform.getDebugOption("aero.minova.rcp.dataservice/debug/cache"));
+
 	private HttpClient httpClient;
 	private Gson gson;
 
@@ -82,12 +85,14 @@ public class DataService implements IDataService {
 	 * Anzahl der Aufrufe des Servers
 	 */
 	private int callCount = 0;
+	private URI workspacePath;
 
 	@Override
-	public void setCredentials(String username, String password, String server) {
+	public void setCredentials(String username, String password, String server, URI workspacePath) {
 		this.username = username;
 		this.password = password;
 		this.server = server;
+		this.workspacePath = workspacePath;
 		init();
 	}
 
@@ -116,13 +121,15 @@ public class DataService implements IDataService {
 		String body = gson.toJson(seachTable);
 
 		HttpRequest request = HttpRequest.newBuilder().uri(URI.create(server + "/data/index")) //
-				.header("Content-Type", "application/json") //
+				.header(CONTENT_TYPE, "application/json") //
 				.method("GET", BodyPublishers.ofString(body))//
 				.build();
 		// return CompletableFuture<Table> future
-		logBody(body, ++callCount);
 		return httpClient.sendAsync(request, BodyHandlers.ofString()).thenApply(t -> {
-			System.out.println(t);
+			if (LOG) {
+				logBody(body, ++callCount);
+				System.out.println(t);
+			}
 			return gson.fromJson(t.body(), Table.class);
 		});
 
@@ -132,7 +139,7 @@ public class DataService implements IDataService {
 	public CompletableFuture<SqlProcedureResult> getDetailDataAsync(String tableName, Table detailTable) {
 		String body = gson.toJson(detailTable);
 		HttpRequest request = HttpRequest.newBuilder().uri(URI.create(server + "/data/procedure")) //
-				.header("Content-Type", "application/json") //
+				.header(CONTENT_TYPE, "application/json") //
 				.POST(BodyPublishers.ofString(body))//
 				.build();
 		// return CompletableFuture<SqlProcedureResult> future
@@ -178,22 +185,7 @@ public class DataService implements IDataService {
 
 	}
 
-	@Override
-	public CompletableFuture<Integer> getReturnCodeAsync(String tableName, Table detailTable) {
-		init();
-		String body = gson.toJson(detailTable);
-		HttpRequest request = HttpRequest.newBuilder().uri(URI.create(server + "/data/procedure-with-return-code")) //
-				.header("Content-Type", "application/json") //
-				.POST(BodyPublishers.ofString(body))//
-				.build();
-		// return CompletableFuture<Integer> future
-		logBody(body, ++callCount);
-		return httpClient.sendAsync(request, BodyHandlers.ofString())
-				.thenApply(t -> gson.fromJson(t.body(), Table.class).getRows().get(0).getValue(0).getIntegerValue());
-
-	}
-
-	public static SSLContext disabledSslVerificationContext() {
+	private static SSLContext disabledSslVerificationContext() {
 		// Remove certificate validation
 		SSLContext sslContext = null;
 
@@ -222,134 +214,137 @@ public class DataService implements IDataService {
 		return sslContext;
 	}
 
-	void logBody(String body) {
+	private void logBody(String body) {
 		if (LOG) {
-			// TODO Logging verbessern
 			System.out.println(body);
 		}
 
 	}
 
+	private static void logCache(String message) {
+		if (LOG_CACHE) {
+			System.out.println(message);
+		}
+
+	}
+
 	private void logBody(String body, int i) {
-		logBody("Call: " + i + "\n" + body);
-	}
-
-	/**
-	 * synchrones laden einer Datei vom Server.
-	 *
-	 * @param localPath Lokaler Pfad für die Datei. Der Pfad vom #filename wird noch
-	 *                  mit angehängt.
-	 * @param filename  relativer Pfad und Dateiname auf dem Server
-	 * @return Die Datei, wenn sie geladen werden konnte; ansonsten null
-	 */
-	@Override
-	public File getFileSynch(String filename) {
-		String path = null;
-		try {
-			path = Platform.getInstanceLocation().getURL().toURI().toString();
-			File cachedFile = new File(new URI(path + filename));
-			if (cachedFile.exists()) {
-				return cachedFile;
-			}
-		} catch (URISyntaxException e) {
+		if (LOG) {
+			logBody("Call: " + i + "\n" + body);
 		}
-		return getFileSynch(path, filename);
-	}
-
-	/**
-	 * synchrones laden einer Datei vom Server.
-	 *
-	 * @param localPath Lokaler Pfad für die Datei. Der Pfad vom #filename wird noch
-	 *                  mit angehängt.
-	 * @param filename  relativer Pfad und Dateiname auf dem Server
-	 * @return Die Datei, wenn sie geladen werden konnte; ansonsten null
-	 */
-	@Override
-	public File getFileSynch(String localPath, String filename) {
-		HttpRequest request = HttpRequest.newBuilder().uri(URI.create(server + "/files/read?path=" + filename))
-				.header("Content-Type", "application/octet-stream") //
-				.build();
-
-		try {
-			logBody("getFileSynch(" + filename + ")", ++callCount);
-			String body = httpClient.send(request, BodyHandlers.ofString()).body();
-			URI uri = new URI(localPath + filename);
-			Files.writeString(Path.of(uri), body, StandardOpenOption.CREATE);
-			return new File(uri);
-		} catch (IOException | URISyntaxException | InterruptedException e) {
-			e.printStackTrace();
-		}
-		return null;
-
-	}
-
-	/**
-	 * asynchrones Laden eines Files vom Server
-	 */
-	@Override
-	public CompletableFuture<String> getFile(String filename) {
-		HttpRequest request = HttpRequest.newBuilder().uri(URI.create(server + "/files/read?path=" + filename))
-				.header("Content-Type", "application/octet-stream") //
-				.build();
-		logBody("getFile(" + filename + ")", ++callCount);
-		return httpClient.sendAsync(request, BodyHandlers.ofString()).thenApply(HttpResponse::body);
-
 	}
 
 	@Override
-	public void loadFile(UISynchronize sync, String filename) {
-		loadFile(sync, filename, false);
-	}
+	public CompletableFuture<String> getHashedFile(String filename) {
+		String localHashValue = "";
+		String serverHashCode = "";
+		boolean updateRequired = true;
+		logCache("Requested file: " + filename);
+		File cachedFile = Path.of(getStoragePath().toString(), filename).toFile();
 
-	public void loadFile(UISynchronize sync, String filename, boolean reload) {
-		try {
-			String workspacePath = Platform.getInstanceLocation().getURL().toURI().toString().substring(5);
-			Path localPath = FileSystems.getDefault().getPath(workspacePath + filename);
-			if (!reload && Files.exists(localPath)) {
-				return; // Datei existiert lokal und muss nicht nachgeladen werden
-			}
-			Files.createDirectories(localPath.getParent());
+		// cached file existiert, wir checken mit dem Server ob das noch aktuell ist
+		if (cachedFile.exists()) {
+			logCache("File exist, building hash");
 			try {
-				CompletableFuture<String> fileFuture = getFile(filename);
-				fileFuture.thenAccept(bytes -> sync.asyncExec(() -> {
-					try {
-						byte[] file;
-						try {
-							String result = bytes.substring(1, bytes.length() - 2);
-							String byteValues[] = result.split(",");
-							file = new byte[byteValues.length];
-							int i = 0;
-							for (String string : byteValues) {
-								file[i++] = Byte.parseByte(string);
-							}
-						} catch (NumberFormatException nfe) {
-							// Es ist wohl keine Datei angekommen
-							file = new byte[0];
-						}
-						Files.write(localPath, file);
-					} catch (IOException e1) {
-						e1.printStackTrace();
+				localHashValue = HashService.hashFile(cachedFile);
+				logCache("Local hash:  " + localHashValue);
+				try {
+					serverHashCode = getHashForFile(filename).join();
+					if (serverHashCode.equals(localHashValue)) {
+						updateRequired = false;
 					}
-				}));
-			} catch (NullPointerException npe) {
-				npe.printStackTrace();
-			}
-		} catch (URISyntaxException | IOException e) {
-			e.printStackTrace();
+					logCache("Server hash: " + serverHashCode);
+				} catch (RuntimeException e) {
+					// server does not know the file
+				}
+
+			} catch (IOException e) {
+				// something went wrong we need to download the file again
+			}			
 		}
+		
+		if (updateRequired) {
+			logCache(filename + " need to download / update the file ");
+			CompletableFuture<String> downloadAsync = downloadAsync(filename);
+			saveFile(filename, downloadAsync);
+			return downloadAsync;
+		}
+		return getCachedFileContent(filename);
+
+	}
+
+	/**
+	 * synchrones laden einer Datei vom Server.
+	 *
+	 * @param localPath Lokaler Pfad für die Datei. Der Pfad vom #filename wird noch
+	 *                  mit angehängt.
+	 * @param filename  relativer Pfad und Dateiname auf dem Server
+	 * @return Die Datei, wenn sie geladen werden konnte; ansonsten null
+	 */
+	private CompletableFuture<String> downloadAsync(String filename) {
+		HttpRequest request = HttpRequest.newBuilder().uri(URI.create(server + "/files/read?path=" + filename))
+				.header(CONTENT_TYPE, APPLICATION_OCTET_STREAM) //
+				.build();
+		logBody("getFileSynch(" + filename + ")", ++callCount);
+		return httpClient.sendAsync(request, BodyHandlers.ofString()).thenApply(HttpResponse::body);
+	}
+
+	/**
+	 * Only public for the integration tests
+	 * 
+	 * @param filename
+	 * @return
+	 */
+	public CompletableFuture<String> getHashForFile(String filename) {
+		HttpRequest request = HttpRequest.newBuilder().uri(URI.create(server + "/files/hash?path=" + filename))
+				.header(CONTENT_TYPE, APPLICATION_OCTET_STREAM) //
+				.build();
+		
+		return httpClient.sendAsync(request, BodyHandlers.ofString()).thenApply(response -> {
+			if (response.statusCode() != 200) {
+				throw new RuntimeException("Server returned " + response.statusCode());
+			}
+			return response;
+		}).thenApply(HttpResponse::body);
+
+	}
+
+	private CompletableFuture<String> getCachedFileContent(String filename) {
+		return CompletableFuture.supplyAsync(() -> {
+			try {
+				File cachedFile = new File(new URI(workspacePath + filename));
+				if (cachedFile.exists()) {
+					return Files.readString(cachedFile.toPath());
+				}
+			} catch (IOException | URISyntaxException e) {
+				e.printStackTrace();
+			}
+			throw new CompletionException("File not found", null);
+		});
+	}
+
+	private void saveFile(String fileName, CompletableFuture<String> future) {
+		future.thenAccept(s -> {
+			try {
+				File cachedFile = null;
+				try {
+					cachedFile = new File(new URI(workspacePath + fileName));
+				} catch (URISyntaxException e) {
+					e.printStackTrace();
+					return; 
+				}
+				Files.writeString(cachedFile.toPath(), future.join());
+				logCache("Cached file: " + fileName);
+			} catch (IOException e) {
+				e.printStackTrace();
+			}
+
+		});
 	}
 
 	@Override
 	public Path getStoragePath() {
-		Location instanceLocation = Platform.getInstanceLocation();
-		Path p;
-		try {
-			p = Paths.get(instanceLocation.getURL().toURI());
-		} catch (URISyntaxException e) {
-			Platform.getLog(this.getClass()).error(e.getMessage());
-			throw new RuntimeException(e);
-		}
-		return p;
+		return Path.of(workspacePath);
 	}
 
 	/**
@@ -625,4 +620,11 @@ public class DataService implements IDataService {
 		return tableFuture;
 	}
 
+
+//	@Override
+//	public <T> T convert(Path f, Class<T> clazz) {
+//		String content = Files.readString(f, StandardCharsets.UTF_8);
+//		gson.fromJson(f., clazz)
+//		return null;
+//	}
 }
